Publishing_Tutorial/sectionAndFooter/style/style.css
@charset 'utf-8';
@import './reset.css';

/* section */

section{
    background: #eee;
    padding: 150px 0px;
}

section div.inner{
    width:1180px;
    margin: 0px auto;
}

.inner h1{
    margin-bottom:100px;
    font:bold 22px/1 "arial"; color: #aaa;
}

.wrap article{
    width:580px;
    float:left;
    margin-right:20px;
}

/* 항상 화면에 꽉차도록 2,4번째요소에 margin-right제거 */

.wrap article:nth-of-type(2n){
    margin-right:0px
}



article div.pic{
    width: 20%;
    height: 146px;
    /* pic의 높이값 조절에 어려움을 느낌 
    pic의 높이는 어떻게 결정되야 하는지 모르겠음
    */
    background: #ccc;
    float:left;
}

article .content{
    padding:20px;
    background: #fff;
    width:80%;
    float:left;
    margin-bottom:20px;
}

.content h2{
    color: #aaa
}

.content p{
    margin-bottom:10px;
}

.content i{
    margin-right:10px;
    color: #aaa;
    /* 폰트어썸 두번째 아이콘 어떤건지 몰라서
    다른것 넣고 레이아웃작성 */
}

/* footer */

footer{
    background: #aaa;
    padding: 50px 0px;
}

footer div.inner{
    width:1180px;
    margin: 0px auto;
}

.inner .header{
    border-bottom: 1px solid #ccc;
    margin-bottom: 20px;
}

.wrap ul li{
    float:left;
    margin-right:10px;
    margin-bottom: 10px;
    color: #ccc;
}

.wrap div.sns{
    float:right;
    color: #ccc;
}
div.sns i{
    margin-right:10px;
    font-size: 18px;
}
div.sns i:last-of-type{
    margin-right:0px;
}

div.inner .logo{
    font-size:22px;
    float:left;
    color: #bbb;
}

div.inner .info{
    float:right;
    font-size:12px;
    text-align: right;
    color: #ccc;
}

